# Pacman

./: CMakeLists.txt  README.md
res/: settings.ini
res/maps/: _examples.map  test1.map  test2.map
src/: game_manager.cpp  game_manager.hpp  main.cpp  settings.cpp  settings.hpp
src/game_objects/: food.cpp  food.hpp  game_object.cpp  game_object.hpp  ghost.cpp  ghost.hpp  movable.cpp  movable.hpp  pacman.cpp  pacman.hpp  wall.cpp  wall.hpp
